# ELa

./: .gitignore  CMakeLists.txt  README.md  main.cpp  test.ela  test2.ela
doc/ru/: builtins.md
example/: test.ela
include/: Interpreter.hpp  Lexer.hpp  Parser.hpp  builtins.hpp  defs.hpp  operator.hpp  typedefs.hpp  utils.hpp
include/tools/: defs.hpp  operator.hpp  typedefs.hpp
src/: CMakeLists.txt  Interpreter.cpp  Lexer.cpp  Parser.cpp  main.cpp
src/include/: Error.hpp  Interpreter.hpp  Parser.hpp
src/include/tools/: builtins.hpp  defs.hpp  typedefs.hpp  utils.hpp
src/interpreter/: Interpreter.cpp
src/parser/: Parser.cpp
